start on adgroup tab

--- a/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/Index.cshtml
@@ -37,6 +37,7 @@
             <dd class="active"><a href="#navDashboard" id="nav_Dashboard">Dashboard</a></dd>
             <dd><a href="#navChannelPerf" id="nav_ChannelPerf">Channel Perf</a></dd>
             <dd><a href="#navCampaignPerf" id="nav_CampaignPerf">Campaign Perf</a></dd>
+            <dd><a href="#navAdgroupPerf" id="nav_AdgroupPerf">Adgroup Perf</a></dd>
             <dd><a href="#navContact" id="nav_Contact">Contact</a></dd>
         </dl>
         <!-- /Tabs -->
