--- a/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/Index.cshtml
@@ -1,4 +1,6 @@
-﻿<style>
+﻿@model ClientPortal.Web.Models.IndexModel
+
+<style>
     .searchdiv {
         padding: 10px;
     }
@@ -15,11 +17,11 @@
         <img src="~/Images/logo1a.png" />
     </div>
     <div class="two columns topinfo">
-        @*Html.Partial("_HelloPartial")*@
+        @Html.Partial("_HelloPartial")
     </div>
     <div class="five columns logout">
         <div style="float: right">
-            @*Html.Partial("_LoginPartial")*@
+            @Html.Partial("_LoginPartial")
         </div>
     </div>
 </div>
@@ -112,6 +114,7 @@
     <script src="~/Scripts/kendo/2013.1.514/cultures/kendo.culture.en-GB.min.js"></script>
     <script src="~/Scripts/kendo/2013.1.514/cultures/kendo.culture.en-AU.min.js"></script>
     <script src="~/Scripts/search_grids_charts.js"></script>
+    @Html.Partial("_DateFuncs")
     <script>
         // ready function
         $(function () {
@@ -168,26 +171,6 @@
                 });
             });
 
-        }
-
-        function DateChanged(grid) {
-            $('#' + grid + '_dateRangeSel').data('kendoDropDownList').value('custom');
-            $('#' + grid + '_filterBtn').attr('disabled', false);
-        }
-
-        function ChangeDateRange(grid) {
-            alert('Coming soon.');
-        }
-
-        function RefreshGrid(grid) {
-            var gridDataSource = $('#' + grid + 'Grid').data('kendoGrid').dataSource;
-            gridDataSource.read();
-            if ($('#' + grid + 'Chart').length > 0) {
-                var chartDataSource = $('#' + grid + 'Chart').data('kendoChart').dataSource;
-                if (chartDataSource !== gridDataSource)
-                    chartDataSource.read();
-            }
-            $('#' + grid + '_filterBtn').attr('disabled', true);
         }
     </script>
 }
