--- a/2/LendingTree/LTWeb/Views/Questions/ShowInner.cshtml
+++ b/2/LendingTree/LTWeb/Views/Questions/ShowInner.cshtml
@@ -68,7 +68,7 @@
         <input name="@Model.Key" type="text" value="@Model.Answer" class="validate[required,custom[ssnumber]]" data-prompt-position="@promptPosition" />   
       <br /><span style="font-size: smaller;">@Model.Subtext</span>
         </div>
-    <div class="smallLabel_img"> <a href="#"><img src="http://mortgage-rate-offers.com/images/small-lock.png" alt="" /></a> </div>
+    <div class="smallLabel_img"> <a href="#"><img src="../../Content/images/new/small-lock.png" alt="" /></a> </div>
     
     
     
