--- a/2/LendingTree/LTWeb/Content/Site.css
+++ b/2/LendingTree/LTWeb/Content/Site.css
@@ -1,8 +1,9 @@
-﻿body {
+﻿body{
     font-size: .85em;
     font-family: "Segoe UI", Verdana, Helvetica, Sans-Serif;
     color: #232323;
     background-color: #fff;
+    width:100% 
 }
 
 header, footer, nav, section {
