go back 6/8 months/weeks; align columns horizontally

--- a/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/CampaignPerf.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/CampaignPerf.cshtml
@@ -6,9 +6,9 @@
         <option value="wtd">Week to Date</option>
         <option value="mtd">Month to Date</option>
         <option value="ytd">Year to Date</option>
-        <option value="lastweek" selected="selected">Last Week</option>
+        <option value="lastweek">Last Week</option>
         <option value="lastmonth">Last Month</option>
-        <option value="custom">- custom -</option>
+        <option value="custom" selected="selected">- custom -</option>
     </select>
     <span class="paddedlabel">Start:</span>
     <input id="campaignperf_startdate" name="startdate" type="text" value="@Model.StartDate" onchange="DateChanged('campaignperf')" />
