--- a/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/ChannelPerf.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/ChannelPerf.cshtml
@@ -3,8 +3,8 @@
 <script>
     $(function () {
         var channelperfDS = CreateSummaryDataSource('@Url.Action("ChannelPerfData")', null, true);
-        CreateSummaryGrid(channelperfDS, $('#channelperfGrid'), 350, 'Channel', 20, 2, function (e) {
-            DetailInit(e, '@Url.Action("CampaignPerfData")');
+        CreateSummaryGrid(channelperfDS, $('#channelperfGrid'), 550, 'Channel', 20, 2, function (e) {
+            DetailInit(e, '@Url.Action("CampaignPerfData", "SearchReports")');
         });
         channelperfDS.read();
     });
