Camp Perf: show channel

--- a/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/CampaignPerf.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/CampaignPerf.cshtml
@@ -33,7 +33,7 @@
                 };
             },
             false);
-        CreateSummaryGrid(campaignperfDS, $('#campaignperfGrid'), 350, 'Campaign', 20, 2, true, null);
+        CreateSummaryGrid(campaignperfDS, $('#campaignperfGrid'), 550, 'Campaign', 20, 2, true, true, null);
 
         campaignperfDS.read();
     });
