--- a/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/ChannelPerf.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/ChannelPerf.cshtml
@@ -3,7 +3,7 @@
 <script>
     $(function () {
         var channelperfDS = CreateSummaryDataSource('@Url.Action("ChannelPerfData", "SearchReports")', null, true);
-        CreateSummaryGrid(channelperfDS, $('#channelperfGrid'), 550, 'Channel', 20, 2, false, function (e) {
+        CreateSummaryGrid(channelperfDS, $('#channelperfGrid'), 550, 'Channel', 20, 2, false, false, function (e) {
             DetailInit(e, '@Url.Action("CampaignPerfData", "SearchReports")');
         });
         channelperfDS.read();
