--- a/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/Monthly.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/SearchHome/Monthly.cshtml
@@ -27,7 +27,7 @@
 <script>
     $(function () {
         var monthsumDS = CreateSummaryDataSource('@Url.Action("MonthSumData", "SearchReports")', null, false);
-        CreateSummaryGrid(monthsumDS, $('#monthsumGrid'), 300, 'Month', 10, 0, true, null);
+        CreateSummaryGrid(monthsumDS, $('#monthsumGrid'), 300, 'Month', 10, 0, true, false, null);
 
         CreateRevROASChart(monthsumDS, 'monthrevChart', 'Monthly Revenue vs. ROAS Performance');
         CreateOrderCPOChart(monthsumDS, 'monthorderChart', 'Monthly Orders vs. CPO Performance');
